# PlatformerTest

./: .gitignore  CMakeLists.txt  ECS.txt  PlatformerTest.sln  PlatformerTest.vcxproj  PlatformerTest.vcxproj.filters  build.bat  entities.json  run.bat
engine/include/anim/: SpriteSheetAnimation.h
engine/include/core/: Globals.h
engine/include/ecs/: Component.h  ComponentArray.h  ComponentTypes.h  ECS_Definitions.h  Ecs.h  System.h
engine/include/ecs/components/: SpriteComponent.h  SpriteSheetComponent.h  TransformComponent.h
engine/include/ecs/systems/: SpriteRenderer.h  SpriteSheetRenderer.h
engine/include/entity/: AnimatedEntity.h  Entity.h  EntityManager.h  SpriteEntity.h  SpriteSheetEntity.h
engine/include/input/: InputData.h  InputManager.h  InputMiddleware.h  InputProvider.h
engine/include/render/: Camera.h  MasterRenderer.h  SpriteBatch.h  SpriteSheetBatch.h
engine/include/resources/: ResourceManager.h  Sprite.h  SpriteSheet.h  Texture.h
engine/include/tenshiUtil/: CMakeLists.txt  Types.h
engine/include/tenshiUtil/container/: STLUtil.h
engine/include/tenshiUtil/eventsystem/: EventSystem.h
engine/include/tenshiUtil/math/: Random.h
engine/include/tenshiUtil/memory/: Ssbo.cpp  UniformBuffer.cpp  UniformBuffer.h
engine/src/: CMakeLists.txt  Main.cpp
engine/src/anim/: SpriteSheetAnimation.cpp
engine/src/core/: Game.cpp
engine/src/ecs/: Ecs.cpp  System.cpp
engine/src/ecs/components/: SpriteComponent.cpp  SpriteSheetComponent.cpp  TransformComponent.cpp
engine/src/ecs/systems/: SpriteRenderer.cpp  SpriteSheetRenderer.cpp
engine/src/entity/: AnimatedEntity.cpp  Entity.cpp  EntityManager.cpp  SpriteEntity.cpp  SpriteSheetEntity.cpp
engine/src/input/: InputManager.cpp  InputMiddleware.cpp  InputProvider.cpp
engine/src/render/: MasterRenderer.cpp
engine/src/resources/: ResourceManager.cpp  SpriteSheet.cpp  Texture.cpp
game/include/player/: PlayerInputMiddleware.h
game/src/: CMakeLists.txt
game/src/player/: PlayerInputMiddleware.cpp
include/core/: Game.h  Globals.h
include/entity/: Entity.h  EntityManager.h  SpriteEntity.h  SpriteSheetEntity.h
include/input/: InputData.h  InputHandler.h
include/memory/: Ssbo.h
include/render/: Camera.h  MasterRenderer.h  SpriteBatch.h  SpriteSheetBatch.h
include/resources/: ResourceManager.h  Shader.h  Sprite.h  SpriteSheet.h  Texture.h  Vertex.h
include/tenshiUtil/: Types.h
include/tenshiUtil/math/: Rect2D.h  Transform2D.h
include/tenshiUtil/memory/: Ssbo.h
res/anim/: player.json
res/shader/: sprite.frag  sprite.vert
res/sprites/: spritesheets.json
src/core/: Game.cpp
src/entity/: EntityManager.cpp  SpriteSheetEntity.cpp
src/input/: InputManager.cpp  InputProvider.cpp
src/memory/: Ssbo.cpp
src/render/: Camera.cpp  MasterRenderer.cpp
src/resources/: Shader.cpp  SpriteSheet.cpp  Texture.cpp
